# Mini-Ecom-React-django

./: .env  .gitignore  main.py  pyproject.toml
Backend/Ecom_main/: asgi.py  settings.py  urls.py  wsgi.py
Backend/Product/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
Backend/Product/management/commands/: seed_fake_data.py  upload_product_images.py
Backend/Product/migrations/: 0001_initial.py  0002_category_created_at_category_updated_at_and_more.py  0003_productimage_unique_product_image.py  0004_remove_productimage_unique_product_image.py  0005_alter_productimage_product.py
Backend/accounts/: admin.py  email.py  hashers.py  models.py  serializer.py  signals.py  tokens.py  urls.py  views.py
Backend/accounts/migrations/: 0001_initial.py  0002_rename_created_at_user_date_joined.py  0002_user_email_verifed.py
Backend/cart/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/cart/migrations/: 0001_initial.py  0002_cart_session_key_alter_cart_user.py  0003_alter_cartitem_cart.py
Backend/order/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/order/migrations/: 0001_initial.py  0002_alter_order_user.py
