[project]
name = "ecom-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudinary>=1.44.2",
    "django>=6.0.4",
    "django-cloudinary-storage>=0.3.0",
    "django-phonenumber-field>=8.4.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "phonenumbers>=9.0.28",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
]
